refactor: renomear 'usuarios' para 'users' em todo o código e 'idUsuario' para 'id' e ajustar referências
