# src/models/usuario.ts
@@ -1,5 +1,5 @@
 export type Usuario = {
-  idUsuario: number; 
+  id: number; 
   nome: string;
   email: string;
   telefone?: string;
